--- a/deploy/kubernetes-1.27/hostpath/csi-hostpath-plugin.yaml
+++ b/deploy/kubernetes-1.27/hostpath/csi-hostpath-plugin.yaml
@@ -237,9 +237,7 @@ spec:
       serviceAccountName: csi-hostpathplugin-sa
       containers:
         - name: hostpath
-          # TODO: Revert comment once https://github.com/kubernetes-csi/csi-driver-host-path/pull/569 is merged
-          #image: registry.k8s.io/sig-storage/hostpathplugin:v1.15.0
-          image: prasadg193/hostpathplugin:amd64-linux-canary
+          image: registry.k8s.io/sig-storage/hostpathplugin:v1.15.0
           args:
             - "--drivername=hostpath.csi.k8s.io"
             - "--v=5"
